@@ -7,6 +7,10 @@ itemGroup.buildingBricks=Building Bricks
 item.trowel.name=Trowel
 item.trowelBinded.name=Trowel (%s)
 
+key.categories.trowel=Trowel
+key.trowelNext=Next Block Type
+key.trowelPrev=Previous Block Type
+
 blockType.full=%s
 blockType.stairs=%s Stairs
 blockType.slab=%s Slab
